syntax = "proto3";

// File overview 文件概述

package simple_bank;

import "user.proto";

option go_package = "simple_bank/pb";

message CreateUserRequest {
	string username = 1;
	string full_name = 2;
	string email = 3;
	string password = 4;
}

message CreateUserResponse {
	User user = 1;
}
