syntax = "proto3";

// File overview 文件概述

package simple_bank;

option go_package = "simple_bank/pb";

import "google/api/annotations.proto";
import "rpc_create_user.proto";
import "rpc_login_user.proto";

service CreateUserService {
	rpc CreateUser(CreateUserRequest) returns (CreateUserResponse){
		option (google.api.http) = {
			post: "/v1/create_user"
			body: "*"
		};
	}
	rpc LoginUser(LoginUserRequest) returns (LoginUserResponse){
		option (google.api.http) = {
			post: "/v1/login_user"
			body: "*"
		};
	}
}
